--- a/css/formulaireContact.less
+++ b/css/formulaireContact.less
@@ -31,8 +31,7 @@ textarea {
 
 .formulaireContact input[type="submit"]{
     padding: 10px 15px;
-    border: solid 1px hsl(0, 0%, 70%);
-    background-color: hsl(0, 0%,90%);
+    border: solid 1px @color-article-border;
 }
 
 .formulaireContact input[type="text"],
