--- a/css/menu.less
+++ b/css/menu.less
@@ -95,7 +95,7 @@
 /*****************************/
 
 .tabs-style-linemove nav {
-	background: hsl(0,0%,100%);
+	background: color-bg-article;
 }
 
 .tabs-style-linemove nav li:last-child::before {
@@ -131,13 +131,13 @@
 
 .tabs-style-linemove nav a {
 	padding: 1em 0;
-	color: hsl(0,0%,20%);
+	color: @color-font-primary;
 	line-height: 1.8em;
 	transition: color 0.3s, transform 0.3s;
 }
 
 .tabs-style-linemove nav li.tab-current a {
-	color: hsl(0,0%,20%);
+	color: @color-font-primary;
 /*	transform: translate3d(0,8px,0);*/
 }
 
