--- a/layouts/apropos.html
+++ b/layouts/apropos.html
@@ -1,4 +1,5 @@
-<div class="equipe">
+<body id="js-membre" class="membre">
+<div>
 	<div<span>Présidente</span><span>{{presidente}}</span>></div>
 	</div><span>Trésorière</span><span>{{tresoriere}}</span></div>
 </div>
