--- a/layouts/partials/article-resume.html
+++ b/layouts/partials/article-resume.html
@@ -1,4 +1,4 @@
-<div class="articleResume {{#isAxePrevention}}articleResume-prevention{{/isAxePrevention}}{{#isAxeFormation}}articleResume-formation{{/isAxeFormation}}{{#isAxeRecherche}}articleResume-recherche{{/isAxeRecherche}}">
+<div class="{{#isAxePrevention}}article-prevention{{/isAxePrevention}}{{#isAxeFormation}}article-formation{{/isAxeFormation}}{{#isAxeRecherche}}article-recherche{{/isAxeRecherche}} articleResume {{#isAxePrevention}}articleResume-prevention{{/isAxePrevention}}{{#isAxeFormation}}articleResume-formation{{/isAxeFormation}}{{#isAxeRecherche}}articleResume-recherche{{/isAxeRecherche}}">
     {{> articleInfo}}
     <div class="articleResume-contenu">
         <p>{{&excerpt}}<span> ...</span></p>
