--- a/layouts/partials/axe-formation.html
+++ b/layouts/partials/axe-formation.html
@@ -1,4 +1,4 @@
-<a href="/{{path}}"><div class="axeFormation">
+<div class="axeFormation">
     <svg class="axeFormation-image" xmlns:x="http://ns.adobe.com/Extensibility/1.0/" xmlns:i="http://ns.adobe.com/AdobeIllustrator/10.0/" xmlns:graph="http://ns.adobe.com/Graphs/1.0/" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Livello_1" x="0px" y="0px" viewBox="0 -32 121 130" enable-background="new 0 0 100 100" xml:space="preserve" >
         <switch>
             <foreignObject requiredExtensions="http://ns.adobe.com/AdobeIllustrator/10.0/" x="0" y="0" width="1" height="1">
@@ -32,5 +32,6 @@
             </g>
         </switch>
     </svg>
+    <div class="axeFormation-titre">formation</div>
     <div class="axeFormation-detail">Proposer des formations professionnelles en tant qu’organisme de formation</div>
-</div></a>
+</div>
