--- a/layouts/partials/axe-prevention.html
+++ b/layouts/partials/axe-prevention.html
@@ -1,4 +1,4 @@
-<a href="/{{path}}"><div class="axePrevention">
+<div class="axePrevention">
     <svg class="axePrevention-image" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Capa_1" x="0px" y="0px" viewBox="17 -6 100 100" enable-background="new 0 0 100 100" xml:space="preserve">
         <g id="Capa_29">
             <g>
@@ -10,5 +10,6 @@
             </g>
         </g>
     </svg>
+    <div class="axePrevention-titre">prévention</div>
     <div class="axePrevention-detail">faciliter la mise en œuvre de la prévention des pathologies du langage et de la communication ...</div>
-</div></a>
+</div>
