--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -7,17 +7,17 @@
         <!-- build:css ../../src/css/combined.css -->
         <link rel="stylesheet" href="../../vendor/normalize.css">
         <link rel="stylesheet" href="../../vendor/base.css">
-        <link rel="stylesheet" href="../../css/font.css">
-        <link rel="stylesheet" href="../../css/icon.css">
-        <link rel="stylesheet" href="../../css/app.css">
-        <link rel="stylesheet" href="../../css/nav.css">
-        <link rel="stylesheet" href="../../css/article.css">
-        <link rel="stylesheet" href="../../css/article-detail.css">
-        <link rel="stylesheet" href="../../css/formulaireContact.css">
-        <link rel="stylesheet" href="../../css/apropos.css">
-        <link rel="stylesheet" href="../../css/axe.css">    
-        <link rel="stylesheet" href="../../css/grid.css">  
-        <link rel="stylesheet" href="../../css/rwd.css">   
+        <link rel="stylesheet" href="../../css/couleur.less">
+        <link rel="stylesheet" href="../../css/font.less">
+        <link rel="stylesheet" href="../../css/icon.less">
+        <link rel="stylesheet" href="../../css/app.less">
+        <link rel="stylesheet" href="../../css/nav.less">
+        <link rel="stylesheet" href="../../css/article.less">
+        <link rel="stylesheet" href="../../css/article-detail.less">
+        <link rel="stylesheet" href="../../css/formulaireContact.less">
+        <link rel="stylesheet" href="../../css/apropos.less">
+        <link rel="stylesheet" href="../../css/axe.less">    
+        <link rel="stylesheet" href="../../css/grid.less">  
+        <link rel="stylesheet" href="../../css/rwd.less">   
         <!-- endbuild -->
-    </head>
-    <body>
+    </head>    
