--- a/css/app.less
+++ b/css/app.less
@@ -1,7 +1,11 @@
 html {
     font-family: 'font-regular', sans-serif;
     line-height: 1.4rem;
-    color: hsla(0, 0%, 0%, .75);
+    color: @color-font-primary;
+}
+
+body {
+    background-color: @color-bg-body;        
 }
 
 h1, 
