--- a/css/article-detail.less
+++ b/css/article-detail.less
@@ -1,5 +1,5 @@
 .articleDetail {
-    background-color: hsl(0,0%,100%);    
+    background-color: @color-bg-article;    
     padding: 20px 25px;
 }
 
@@ -20,14 +20,14 @@
     margin-left: 10px;
 }
 
-.prevention a {
-    color: hsl(201, 40%, 56%);
+.article-prevention a {
+    color: @color-prevention-dark;
 }
 
-.recherche a {
-    color: hsl(260, 31%, 62%);
+.article-recherche a {
+    color: @color-recherche-dark;
 }
 
-.formation a {
-    color: hsl(335, 78%, 58%);
+.article-formation a {
+    color: @color-formation-dark;
 }
