--- a/css/article.less
+++ b/css/article.less
@@ -3,20 +3,12 @@
    ------------------------------------------------------*/
 .articleResume,
 .membreBureau {
-    border-bottom: solid 1px hsla(0,0%,0%, 0.3);
-    background-color: hsl(0,0%,100%);    
+    border-bottom: solid 1px @color-article-border;
+    background-color: @color-bg-article;    
     padding-top: 20px;
     padding-left: 25px;
     padding-right: 25px;
     padding-bottom: 20px;
-    /*margin-top: 25px;*/
-    /*margin-left: auto;*/
-    /*margin-right: auto;    */
-/*    cursor: pointer;*/
-}
-
-html {
-    background-color: hsla(0,0%,0%, 0.1);
 }
 
 .article-titre,
@@ -27,31 +19,24 @@ html {
 
 .article-info {
     font-size: .9rem;
-    color: hsla(0,0%,0%, 0.55);
+    color: @color-font-secondary;
 }
-/*
-.article-date,
-.article,
-.article-lieu{
-    font-size: 14px;
-    color: hsl(0, 0%, 55%);
-}
-*/
+
 .articleResume-contenu {
     margin-top: 10px;
     position: relative;
 }
 
 .accueil .articleResume-prevention {
-    border-left: solid 5px hsl(201, 40%, 56%) !important;
+    border-left: solid 5px @color-prevention-dark !important;
 }
 
 .accueil .articleResume-recherche {
-    border-left: solid 5px hsl(260, 31%, 62%) !important;
+    border-left: solid 5px @color-recherche-dark !important;
 }
 
 .accueil .articleResume-formation {
-    border-left: solid 5px hsl(335, 78%, 58%) !important;
+    border-left: solid 5px @color-formation-dark !important;
 }
 
 .article-date {
@@ -122,17 +107,5 @@ html {
     font-size: 0.75rem;
     margin-left: 24px;
     margin-top: -5px;
-    color: hsla(0, 0%, 0%, 0.55);
-}
-
-.articleResume-prevention a {
-    color: hsl(201, 40%, 56%);
-}
-
-.articleResume-recherche a {
-    color: hsl(260, 31%, 62%);
-}
-
-.articleResume-formation a {
-    color: hsl(335, 78%, 58%);
+    color: color-font-secondary;
 }
