ajout de la pge contact

--- a/css/nav.less
+++ b/css/nav.less
@@ -10,15 +10,18 @@
 
 .nav-item {
 	flex: 0 0 auto;
-	width: 25%; 
+	width: 20%; 
 }
 
-.nav-accueil {
+.nav-accueil,
+.nav-contact {
 	padding-bottom: 15px;
 }
 
 .nav-accueil:hover,
-.nav-accueil--active {
+.nav-accueil--active,
+.nav-contact:hover,
+.nav-contact--active {
 	border-bottom: solid 3px @color-font-primary;
 	color: @color-font-primary;	
 }
