ajout de la page qui-sommes-nous

--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -3,4 +3,6 @@
 	<div class="nav-item"><span class="nav-prevention"><a href="/pages/prevention">Prévention</a></span></div>
 	<div  class="nav-item"><span class="nav-recherche"><a href="/pages/recherche">Recherche</a></span></div>
 	<div  class="nav-item"><span class="nav-formation"><a href="/pages/formation">Formation</a></span></div>
+    <div  class="nav-item"><span class="nav-formation"><a href="/pages/qui-sommes-nous">Formation</a></span></div>
+    <div  class="nav-item"><span class="nav-formation"><a href="/pages/contact">Formation</a></span></div>
 </div>
