ajout de la page qui-sommes-nous

--- a/css/nav.less
+++ b/css/nav.less
@@ -14,20 +14,25 @@
 }
 
 .nav-accueil,
-.nav-contact {
+.nav-contact,
+.nav-prevention,
+.nav-recherche,
+.nav-formation,
+.nav-qui-sommes-nous {
 	padding-bottom: 15px;
 }
 
 .nav-accueil:hover,
 .nav-accueil--active,
 .nav-contact:hover,
-.nav-contact--active {
+.nav-contact--active,
+.nav-qui-sommes-nous:hover,
+.nav-qui-sommes-nous--active {
 	border-bottom: solid 3px @color-font-primary;
 	color: @color-font-primary;	
 }
 
 .nav-prevention {
-	padding-bottom: 15px;
 	border-bottom: 1px solid white;
 	transition: color 300ms ease-in-out 0s;/*, border-bottom-color 300ms ease-in-out 0s;*/
 	/*font-variant: small-caps;*/
@@ -41,7 +46,6 @@
 }
 
 .nav-recherche {
-	padding-bottom: 15px;
 	border-bottom: 1px solid white;
 	transition: color 300ms ease-in-out 0s;/*, border-bottom-color 300ms ease-in-out 0s;*/
 	/*font-variant: small-caps;*/
@@ -54,7 +58,6 @@
 }
 
 .nav-formation {
-	padding-bottom: 15px;
 	border-bottom: 1px solid white;
 	transition: color 300ms ease-in-out 0s;/*, border-bottom-color 300ms ease-in-out 0s;*/
 	/*font-variant: small-caps;*/
