--- a/layouts/contact.html
+++ b/layouts/contact.html
@@ -2,7 +2,7 @@
 <body id="js-contact" class="contact">
 {{> nav}}
 <div class="formulaireContact">
-	<label for="mail"></label>
+	<label for="mail">Adresse email</label>
 	<input id="mail" type="text">
 	
 	<label for="sujet"></label>
