--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -18,6 +18,8 @@
         <link rel="stylesheet" href="../../css/apropos.less">
         <link rel="stylesheet" href="../../css/axe.less">    
         <link rel="stylesheet" href="../../css/grid.less">  
-        <link rel="stylesheet" href="../../css/rwd.less">   
+        <link rel="stylesheet" href="../../css/rwd.less">
+        <link rel="stylesheet" href="../../css/qui-sommes-nous.less">
+        <link rel="stylesheet" href="../../css/footer.less">   
         <!-- endbuild -->
     </head>    
