--- a/layouts/qui-sommes-nous.html
+++ b/layouts/qui-sommes-nous.html
@@ -1,17 +1,11 @@
----
-presidente: Hélène Le Roux
-secretaire: Kristell Bourdin
-secretaire-adjointe: Muriel Rio-Fiorina
-tresoriere: Blandine Le Pape
-membre-conseil-administration: 
-    - Carole Le Gaillard
-    - Amandine Lemiere
----
-<body id="js-membre" class="membre">
-<div>
-	<div><span>Présidente</span><span>{{presidente}}</span>></div>
-    <div><span>Secrétaire</span><span>{{secretaire}}</span>></div>
-    <div><span>Secrétaire adjointe</span><span>{{secretaire}}</span>></div>
-	</div><span>Trésorière</span><span>{{tresoriere}}</span></div>
-    <div><span>Membres du conseil d'administration</span><span>{{membre-conseil-administration}}</span>></div>
+{{> header}}
+<body id="js-qui-sommes-nous" class="qui-sommes-nous">
+{{> nav}}
+<div class="membreAssociation-container">
+	<div class="membreAssociation"><span class="membreAssociation-titre">Présidente</span><span class="membreAssociation-personne">{{presidente}}</span></div>
+    <div class="membreAssociation"><span class="membreAssociation-titre">Secrétaire</span><span class="membreAssociation-personne">{{secretaire}}</span></div>
+    <div class="membreAssociation"><span class="membreAssociation-titre">Secrétaire adjointe</span><span class="membreAssociation-personne">{{secretaire-adjointe}}</span></div>
+	<div class="membreAssociation"><span class="membreAssociation-titre">Trésorière</span><span class="membreAssociation-personne">{{tresoriere}}</span></div>
+    <div class="membreAssociation"><span class="membreAssociation-titre">Membres du conseil d'administration</span><span class="membreAssociation-personne">{{membre-conseil-administration}}</span></div>
 </div>
+{{> footer}}
