MEF de la page 'qui-sommes-nous'

--- a/css/axe.less
+++ b/css/axe.less
@@ -17,13 +17,18 @@ axe{
     border-bottom: solid 1px @color-formation-dark;
 }
 
+.bodyHeader {
+    background-color: @color-bodyHeader;
+    border-bottom: solid 1px @color-bodyHeader-dark;
+}
+
 .prevention.post .axePrevention,
 .recherche.post .axeRecherche,
 .formation.post .axeFormation {
     margin: 0;    
 }
 
-
+.body-header,
 .axePrevention,
 .axeRecherche,
 .axeFormation{
