--- a/css/couleur.less
+++ b/css/couleur.less
@@ -21,3 +21,6 @@
 @color-formation-text-shadow: lighten(@color-formation, 4%);
 
 @color-article-border:hsl(0, 0%, 70%);
+
+@color-bodyHeader: hsl(0, 0%, 40%);
+@color-bodyHeader-dark: darken(@color-bodyHeader, 10%);
