--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -20,6 +20,7 @@
         <link rel="stylesheet" href="../../css/grid.less">  
         <link rel="stylesheet" href="../../css/rwd.less">
         <link rel="stylesheet" href="../../css/qui-sommes-nous.less">
-        <link rel="stylesheet" href="../../css/footer.less">   
+        <link rel="stylesheet" href="../../css/footer.less">
+        <link rel="stylesheet" href="../../css/utilities.less">   
         <!-- endbuild -->
     </head>    
