--- a/css/footer.less
+++ b/css/footer.less
@@ -1,7 +1,7 @@
 .footer {
-	position: absolute;
-	bottom: 0px;
-	height: 50px;
-	width: 100%;
-	background:#999;
+	// position: absolute;
+	// bottom: 0px;
+	// height: 50px;
+	// width: 100%;
+	// background:#999;
 }
