--- a/css/qui-sommes-nous.less
+++ b/css/qui-sommes-nous.less
@@ -1,3 +1,34 @@
+.quiSommesNous p {
+    margin-top: 20px;
+}
+
+.quiSommesNous-container1 {  
+    padding: 20px;
+    background-color: #aaa;
+    color: white;
+}
+
+.quiSommesNous-container2 {
+    float: left;
+    position: relative;
+    left: 50%;
+}
+
+.quiSommesNous-header {
+    float: left;
+    position: relative;
+    left: -50%;	
+}
+
+.quiSommesNous-body {
+    background-color: white;
+    padding: 20px 25px;
+}
+
+.quiSommesNous-presentation {
+	// width: 50%;
+}
+
 .membreAssociation-container {
 	margin: auto;
 	width: 520px;
@@ -15,4 +46,8 @@
 
 .membreAssociation-personne {
 	margin-left: 20px;
+}
+
+.quiSommesNous a {
+    color: @color-bodyHeader-dark;
 }
