--- a/css/qui-sommes-nous.less
+++ b/css/qui-sommes-nous.less
@@ -1,5 +1,9 @@
+body.quiSommesNous {
+    background-color: white;
+}
+
 .quiSommesNous p {
-    margin-top: 20px;
+    margin-bottom: 1.5em;
 }
 
 .quiSommesNous-container1 {  
@@ -20,8 +24,7 @@
     left: -50%;	
 }
 
-.quiSommesNous-body {
-    background-color: white;
+.quiSommesNous-body {    
     padding: 20px 25px;
 }
 
@@ -47,7 +50,7 @@
 .membreAssociation-personne {
 	margin-left: 20px;
 }
-
-.quiSommesNous a {
-    color: @color-bodyHeader-dark;
-}
+// bug on menu if activate
+// .quiSommesNous a {
+//     color: @color-bodyHeader-dark;
+// }
