--- a/layouts/contact.html
+++ b/layouts/contact.html
@@ -5,10 +5,10 @@
 	<label for="mail">Adresse email</label>
 	<input id="mail" type="text">
 	
-	<label for="sujet"></label>
+	<label for="sujet">Sujet</label>
 	<input id="sujet" type="text">
 	
-	<label for="message"></label>
+	<label for="message">Message</label>
 	<input id="message" type="text">
 	
 	<input class="formulaireContact-bouton" type="submit" value="Envoyer">
