--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -12,9 +12,10 @@
         <link rel="stylesheet" href="../../css/icon.less">
         <link rel="stylesheet" href="../../css/app.less">
         <link rel="stylesheet" href="../../css/nav.less">
+        <link rel="stylesheet" href="../../css/nav-icon.less">
         <link rel="stylesheet" href="../../css/article.less">
         <link rel="stylesheet" href="../../css/article-detail.less">
-        <link rel="stylesheet" href="../../css/formulaireContact.less">
+        <link rel="stylesheet" href="../../css/formulaire-contact.less">
         <link rel="stylesheet" href="../../css/apropos.less">
         <link rel="stylesheet" href="../../css/axe.less">    
         <link rel="stylesheet" href="../../css/grid.less">  
