--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -1,7 +1,13 @@
-<div class="nav">
-	<div class="nav-item"><span class="nav-accueil"><a href="/pages/index">Accueil</a></span></div>
-	<div class="nav-item"><span class="nav-prevention"><a href="/pages/prevention">Prévention</a></span></div>
-	<div  class="nav-item"><span class="nav-recherche"><a href="/pages/recherche">Recherche</a></span></div>
-	<div  class="nav-item"><span class="nav-formation"><a href="/pages/formation">Formation</a></span></div>
-    <div  class="nav-item"><span class="nav-qui-sommes-nous"><a href="/pages/qui-sommes-nous">Qui sommes nous ?</a></span></div>    
+<div class="navIcon-container">
+	<div class="navIcon">
+		<span></span>
+		<!--<div class="navIcon-label">menu</div>-->
+	</div>
+</div>
+<div class="nav nav--hidden">
+	<a class="nav-item nav-accueil" href="/pages/index"><div>Accueil</div></a>
+	<a class="nav-item nav-prevention" href="/pages/prevention"><div>Prévention</div></a>
+	<a class="nav-item nav-recherche" href="/pages/recherche"><div>Recherche</div></a>
+	<a class="nav-item nav-formation" href="/pages/formation"><div>Formation</div></a>
+    <a class="nav-item nav-quiSommesNous" href="/pages/qui-sommes-nous"><div>Qui sommes nous ?</div></a>
 </div>
