--- a/layouts/qui-sommes-nous.html
+++ b/layouts/qui-sommes-nous.html
@@ -1,5 +1,5 @@
 {{> header}}
-<body id="js-qui-sommes-nous" class="quiSommesNous">
+<body id="js-quiSommesNous" class="quiSommesNous">
 {{> nav}}
 <div class="quiSommesNous-container1">
     <div class="quiSommesNous-container2">
