--- a/css/couleur.less
+++ b/css/couleur.less
@@ -1,8 +1,13 @@
 @color-bg-body: hsl(0, 0%, 90%);
+@color-article-border:hsl(0, 0%, 70%);
 @color-bg-article: hsl(0,0%,100%);
 @color-bg-article-resume: @color-bg-article;
 @color-font-primary: hsl(0, 0%, 25%);
 @color-font-secondary: hsl(0, 0%, 45%);
+
+@color-border-button: @color-article-border;
+@color-bgc-button: hsl(0, 0%, 95%);;
+@color-bgc-button-hover: darken(@color-bgc-button, 10%);
 
 // @color-prevention: hsl(201, 40%, 66%);
 @color-prevention: hsl(102, 36%, 49%);
@@ -20,7 +25,6 @@
 @color-formation-dark: darken(@color-formation, 10%);
 @color-formation-text-shadow: lighten(@color-formation, 4%);
 
-@color-article-border:hsl(0, 0%, 70%);
 
 @color-bodyHeader: hsl(0, 0%, 40%);
 @color-bodyHeader-dark: darken(@color-bodyHeader, 10%);
