--- a/css/rwd.less
+++ b/css/rwd.less
@@ -1,5 +1,17 @@
 @media screen and (min-width: 800px) {
 		
+	.nav {
+		text-align: center;
+		line-height: 3.5rem;
+		display: flex;
+		flex-direction: row;
+	}
+	
+	.nav-item {
+		flex: 0 0 auto;
+		width: 20%; 
+	}
+		
 	.grid-2 {
 		display: flex;
 		flex-direction: row;
