Ajout inscription et tarif

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -22,6 +22,7 @@
         <link rel="stylesheet" href="../../css/rwd.less">
         <link rel="stylesheet" href="../../css/qui-sommes-nous.less">
         <link rel="stylesheet" href="../../css/footer.less">
-        <link rel="stylesheet" href="../../css/utilities.less">   
+        <link rel="stylesheet" href="../../css/utilities.less">
+        <link rel="stylesheet" href="../../css/inscription-et-tarif.less">
         <!-- endbuild -->
     </head>    
