--- a/layouts/partials/inscription-tarif.html
+++ b/layouts/partials/inscription-tarif.html
@@ -17,8 +17,8 @@
     {{#isHorsDPC}}
     <h3>Hors DPC</h3>
         <ul>
-            <li>Tarif adhérents "A Propos": {{tarif-hors-dpc-adherent}}</li> 
-            <li>Tarif non adhérents: {{tarif-hors-dpc-non-adherent}}</li>
+            <li>Tarif adhérent: {{tarif-adherent}}</li> 
+            <li>Tarif non adhérent: {{tarif-non-adherent}}</li>
             <li class="pdf-bloc">
                 <a href="../../assets/{{../pdfRelativeDir}}/{{contrat-formation-hors-dpc.pdf}}"><span class="icon-pdf"></span><span class="pdf-descriptionFichier">contrat de formation hors DPC</span></a>
                 <div class="pdf-nomFichier">contrat-formation-dpc.pdf</div>
@@ -49,3 +49,4 @@
     </li>
     {{/isAxeFormation}}      
 </div>
+<p>le contrat ou la convention correspondant à votre situation, signé, accompagné du chèque de réservation et de l’enveloppe timbrée à votre nom et adresse (seuls les dossiers complets seront retenus)</p>
