finition 'tarif et inscription

--- a/css/app.less
+++ b/css/app.less
@@ -13,6 +13,9 @@ body {
     background-color: @color-bg-body;        
 }
 
+ol, ul {
+    margin-left: 10px;
+}
 
 *, *:before, *:after {
   box-sizing: inherit;
