--- a/css/article-detail.less
+++ b/css/article-detail.less
@@ -1,6 +1,10 @@
 .articleDetail {
     background-color: @color-bg-article;    
     padding: 20px 25px;
+    max-width: 40em;
+    left: 0px;
+    right: 0px;
+    margin: auto;
 }
 
 .articleDetail h2 {
@@ -10,15 +14,20 @@
 
 .articleDetail h3 {
     margin-top: 15px;
+    font-size: 1.1em;
+    font-variant: all-petite-caps;
 }
 
 .articleDetail p {
     margin-top: 15px;
 }
 
-.articleDetail ul {
+.articleDetail-adresse,
+.articleDetail-inscription {
     margin-left: 10px;
+    font-size: .9em;
 }
+
 
 .article-prevention a {
     color: @color-prevention-dark;
