--- a/css/article.less
+++ b/css/article.less
@@ -17,6 +17,11 @@
     line-height: 1.1;
 }
 
+.article-sousTitre{
+    font-size: 15px;    
+    display: inline-block;
+}
+
 .article-info {
     font-size: .9rem;
     color: @color-font-secondary;
@@ -91,12 +96,7 @@
 .readMore:hover {
 }
 
-.pdf-bloc{
-    margin-top: 5px;
-}
-
 .pdf-descriptionFichier {
-    font-size: .9rem;
     margin-left: 10px;    
 }
 
