--- a/layouts/partials/article-info.html
+++ b/layouts/partials/article-info.html
@@ -1,4 +1,7 @@
 <a class="article-titre" href="/{{path}}">{{titre}}</a>
+{{#isSousTitre}}
+<a class="article-sousTitre" href="/{{path}}">{{sous-titre}}</a>
+{{/isSousTitre}}
 <div class="article-info">
     <span class="icon-calendar"></span><span class="article-date u-mlxs">{{dateAffichage}}</span>
 {{#if ville}}<span class="icon-location u-mlm"></span><span class="article-ville u-mlxs">{{ville}} ({{departement}})</span>{{/if}}
