--- a/layouts/partials/inscription-tarif.html
+++ b/layouts/partials/inscription-tarif.html
@@ -1,52 +1,45 @@
 <div class="inscriptionTarif">
     <h2>Inscription et tarifs</h2>
+    <p>Veuillez nous retourner le contrat ou la convention correspondant à votre situation, signé, accompagné du chèque de réservation et de l’enveloppe timbrée à votre nom et adresse (seuls les dossiers complets seront retenus)</p>
+    <h3>Adresse</h3>
+    <div>
+        {{#isOrganisateurHLR}}
+        <div class="articleDetail-adresse">Hélène Le Roux<br>3 allée du stade<br>22680 Etables-sur-Mer</div>
+        {{/isOrganisateurHLR}}
+        {{#isOrganisateurKB}}
+        <div class="articleDetail-adresse">Kristell Bourdin<br>8 rue Lamennais<br>22100 Dinan</div>
+        {{/isOrganisateurKB}}
+        {{#isOrganisateurMRF}} 
+        <div class="articleDetail-adresse">Muriel Rio-Fiorina<br>8 rue Lamennais<br>22100 Dinan</div>
+        {{/isOrganisateurMRF}}
+    </div>
     {{#isDPC}}
     <h3>DPC</h3>
-    <ul> 
-        <li>la formation est gratuite et indemnisée</li>
-        <li>Inscription sur le site d'<a href="http://www.ogdpc.fr/">ogdpc</a></li>
-        <li>N° de référence du programme : {{ogdpc-reference}}</li>
-        <li class="pdf-bloc">
-            <a href="../../assets/{{../pdfRelativeDir}}/{{contrat-formation-dpc.pdf}}"><span class="icon-pdf"></span><span class="pdf-descriptionFichier">contrat de formation DPC</span></a>
-            <div class="pdf-nomFichier">contrat-formation-dpc.pdf</div>
-        </li>
-        <li>contrat de formation DPC à retourner signé à l'adresse</li>
-        <li>{{organisateur}}</li>
-    </ul>
+    <div class="articleDetail-inscription">la formation est gratuite et indemnisée<br>
+    Inscrivez-vous sur le site <a href="https://www.mondpc.fr/">www.mondpc.fr</a><br>
+    N° de référence du programme : {{ogdpc-reference}}<br><a href="../../assets/{{../pdfRelativeDir}}/contrat-formation-dpc.pdf"><span class="icon-pdf"></span><span class="pdf-descriptionFichier">contrat de formation DPC</span></a>
+    </div>
     {{/isDPC}}
     {{#isHorsDPC}}
     <h3>Hors DPC</h3>
-        <ul>
-            <li>Tarif adhérent: {{tarif-adherent}}</li> 
-            <li>Tarif non adhérent: {{tarif-non-adherent}}</li>
-            <li class="pdf-bloc">
-                <a href="../../assets/{{../pdfRelativeDir}}/{{contrat-formation-hors-dpc.pdf}}"><span class="icon-pdf"></span><span class="pdf-descriptionFichier">contrat de formation hors DPC</span></a>
-                <div class="pdf-nomFichier">contrat-formation-dpc.pdf</div>
-            </li>
-            <li>contrat de formation Hors DPC à retourner signé à l'adresse</li>
-            <li>{{organisateur}}</li>
-        </ul> 
+    <div class="articleDetail-inscription">Tarif adhérent: {{tarif-adherent-liberal}} €<br> 
+    Tarif non adhérent: {{tarif-non-adherent-liberal}} €<br>
+    <a href="../../assets/{{../pdfRelativeDir}}/contrat-formation-hors-dpc.pdf"><span class="icon-pdf"></span><span class="pdf-descriptionFichier">contrat de formation hors DPC</span></a>
+    </div> 
     {{/isHorsDPC}}
     {{#isSalarie}}        
     <h3>Salarié</h3>
-        <ul>
-            <li>Tarif adhérent: {{tarif-salarie-adherent}}</li>
-            <li>Tarif non adhérent: {{tarif-salarie-non-adherent}}</li>
-            <li class="pdf-bloc">
-                <a href="../../assets/{{../pdfRelativeDir}}/{{contrat-formation-salarie.pdf}}"><span class="icon-pdf"></span><span class="pdf-descriptionFichier">contrat de formation salarié</span></a>
-                <div class="pdf-nomFichier">contrat-formation-salarie.pdf</div>
-            </li>
-            <li>contrat de formation salarié à retourner signé à l'adresse</li>
-            <li>{{organisateur}}</li>
-        </ul>
+    <div class="articleDetail-inscription">Tarif adhérent: {{tarif-adherent-salarie}} €<br>
+    Tarif non adhérent: {{tarif-non-adherent-salarie}} €<br>
+    <a href="../../assets/{{../pdfRelativeDir}}/contrat-formation-salarie.pdf"><span class="icon-pdf"></span><span class="pdf-descriptionFichier">contrat de formation salarié</span></a>
+    </div>
     {{/isSalarie}}
     
-    <h3>Documents annexes</h3>
+    <h2>Documents annexes</h2>
     {{#isAxeFormation}}
-    <li class="pdf-bloc">
-        <a href="../../assets/pdf/reglement-interieur-formation-apropos.pdf"><span class="icon-pdf"></span><span class="pdf-descriptionFichier">réglement intérieur formation "a propos"</span></a>
-        <div class="pdf-nomFichier">reglement-interieur-formation-apropos.pdf</div>
-    </li>
+    <p>
+    <a href="../../assets/pdf/reglement-interieur-formation-apropos.pdf"><span class="icon-pdf"></span><span class="pdf-descriptionFichier">réglement intérieur formation "a propos"</span></a>
+    <div class="pdf-nomFichier">reglement-interieur-formation-apropos.pdf</div>
+    </p>
     {{/isAxeFormation}}      
-</div>
-<p>le contrat ou la convention correspondant à votre situation, signé, accompagné du chèque de réservation et de l’enveloppe timbrée à votre nom et adresse (seuls les dossiers complets seront retenus)</p>
+</div> 
