ajout d'une feuille pour l'impression

--- a/css/rwd.less
+++ b/css/rwd.less
@@ -55,6 +55,12 @@
         margin: 20px 20px 0;    
     }    	
 	
+	.prevention .axePrevention-detail,
+	.recherche .axeRecherche-detail,
+	.formation .axeFormation-detail {
+		max-width: 25em;
+	} 
+	
 	.grid-article {
 		padding: 20px;
 	}
