--- a/layouts/qui-sommes-nous.html
+++ b/layouts/qui-sommes-nous.html
@@ -17,7 +17,13 @@
     </p>
     <p>Nombre d’entre nous sont ou seront sollicités pour réaliser des actions, des missions de prévention sur le terrain.</p>
     <p>A Propos, <span class="u-strong">ouvert à tous les orthophonistes</span>, constitue un point d’appui institutionnel et logistique pour mener à bien ces actions.</p>
-    <p>Les objectifs d'A PROPOS couvrent les 3 axes suivants: <a class="readMore" href="/prevention">Prévention</a>, <a class="readMore" href="Recherche">Recherche</a>, <a class="readMore" href="Formation">Formation</a></p>
+    <p>Les objectifs d'A PROPOS couvrent les 3 axes suivants: 
+        <ul>
+            <li><a class="readMore" href="/prevention">Prévention</a></li>
+            <li><a class="readMore" href="/recherche">Recherche</a></li>
+            <li><a class="readMore" href="/formation">Formation</a></li>
+        </ul>
+    </p>
     <button class="btn-adhesion">Adhérer à l'association</button>
     <a class="readMore" href="/contact">Nous contacter</a>
     
