--- a/css/qui-sommes-nous.less
+++ b/css/qui-sommes-nous.less
@@ -1,5 +1,5 @@
 body.quiSommesNous {
-    background-color: white;
+    background-color: white;    
 }
 
 .quiSommesNous p {
@@ -26,6 +26,10 @@ body.quiSommesNous {
 
 .quiSommesNous-body {    
     padding: 20px 25px;
+    max-width: 40em;
+    left: 0;
+    right: 0;
+    margin: auto;
 }
 
 .quiSommesNous-presentation {
