Ajout des avatars

--- a/layouts/qui-sommes-nous.html
+++ b/layouts/qui-sommes-nous.html
@@ -25,12 +25,11 @@
         </ul>
     </p>
     <button class="btn-adhesion">Adhérer à l'association</button>
-    <a class="readMore" href="/contact">Nous contacter</a>
-    
+        
     <div class="membreAssociation-list">
-        <p class="membreAssociationList-titre">Les membres de l'association</p>
+        <h2 class="membreAssociationList-titre">Les membres de l'association</h2>
         <div class="membreAssociation">
-            <div class="membreAssociation-avatar"></div>
+            <img src="../" class="membreAssociation-avatar avatar-presidente"></img>
             <div class="membreAssociation-titre">Présidente</div>
             <div class="membreAssociation-personne">{{presidente}}</div>
         </div>
@@ -40,5 +39,11 @@
         <div class="membreAssociation"><span class="membreAssociation-titre">Trésorière</span><span class="membreAssociation-personne">{{tresoriere}}</span></div>
         <div class="membreAssociation"><span class="membreAssociation-titre">Membres du conseil d'administration</span><span class="membreAssociation-personne">{{membre-conseil-administration}}</span></div>
     </div>
+    
+	<div class="MembreAssociation">
+		<span class="imageAvatar imageAvatar-01 imageAvatar-association"></span>
+		<span class="MembreAssociation-titre">Secrétaire</span>
+		<span class="MembreAssociation-nomComplet">Hélène Leroux</span>
+	</div>    
 </div>
 {{> footer}}
