--- a/css/qui-sommes-nous.less
+++ b/css/qui-sommes-nous.less
@@ -42,6 +42,51 @@ body.quiSommesNous {
 	margin-top: 50px;
 }
 
+.imageAvatar {
+    background: url('avatar-Membre-association-56.png') no-repeat;
+    width: 56px;
+    height: 56px;
+    display: inline-block;
+}		
+.imageAvatar-association {
+    border-radius: 50%;
+    background-color: white;
+}		
+.imageAvatar-01 {
+    background-position: 0 0;
+}		
+.imageAvatar-02 {
+    background-position: -56px 0;
+}		
+.imageAvatar-03 {
+    background-position: -112px 0;
+}
+.imageAvatar-04 {
+    background-position: -168px 0;
+}
+.imageAvatar-05 {
+    background-position: -224px 0;
+}
+.imageAvatar-06 {
+    background-position: -280px 0;
+}
+.imageAvatar-07 {
+    background-position: -336px 0;
+}
+.Membre-association {
+    
+}
+
+.MembreAssociation-titre {
+    display: inline-block;
+    vertical-align: top;
+}
+
+.MembreAssociation-nomComplet {
+    display: inline-block;
+    vertical-align: top;
+}
+
 .membreAssociation {
 	
 }
@@ -58,3 +103,14 @@ body.quiSommesNous {
 // .quiSommesNous a {
 //     color: @color-bodyHeader-dark;
 // }
+
+.btn-adhesion {
+    padding: 10px;
+    border: 1px solid transparent;
+    background-color: #0095E5;
+    color: white;
+}
+
+.avatar-presidente {
+    
+}
