ajout du bas de page

--- a/css/app.less
+++ b/css/app.less
@@ -1,6 +1,6 @@
 html, body {
   box-sizing: border-box;
-  // height: 100%;
+  height: 100%;
 }
 
 html {
@@ -10,7 +10,15 @@ html {
 }
 
 body {
-    background-color: @color-bg-body;        
+    background-color: @color-bg-body;  
+    position:relative;
+    min-height: 100%;
+          
+}
+
+.wrapper {
+    position: relative;
+    min-height:100%;
 }
 
 ol, ul {
