--- a/css/footer.less
+++ b/css/footer.less
@@ -1,7 +1,9 @@
 .footer {
-	// position: absolute;
-	// bottom: 0px;
-	// height: 50px;
-	// width: 100%;
-	// background:#999;
-}
+	background-color: #333;
+	color: #fff;
+	position: absolute;
+	bottom: 0px;
+	left: 0px;
+	height: 100px;
+	width: 100%;
+}	
