--- a/layouts/post.html
+++ b/layouts/post.html
@@ -1,5 +1,6 @@
 {{>header}}
 <body id="js-{{axe}}" class="{{axe}} post" style="background-color:white">
+<div class="wrapper">
 {{> nav}}
 {{#isAxePrevention}}{{> axePrevention}}{{/isAxePrevention}}
 {{#isAxeRecherche}}{{> axeRecherche}}{{/isAxeRecherche}}
