ajout de la font semibold + mef de la page qui sommes nous

--- a/css/app.less
+++ b/css/app.less
@@ -4,7 +4,7 @@ html, body {
 }
 
 html {
-    font-family: 'font-regular', sans-serif;
+    font-family: 'regular', sans-serif;
     line-height: 1.6rem;
     color: @color-font-primary;
 }
@@ -27,6 +27,26 @@ h3,
 h4, 
 h5 {
     font-weight: normal;
+}
+
+h1 {
+    font-size: 21px;
+    line-height: 1.1;
+}
+
+h2 {
+    margin-top: 30px;
+    font-size: 1.3em;
+}
+
+h3 {
+    margin-top: 15px;
+    font-size: 1.1em;
+    font-variant: all-petite-caps;
+}
+
+p {
+    margin-top: 15px;
 }
 
 a {
