--- a/css/qui-sommes-nous.less
+++ b/css/qui-sommes-nous.less
@@ -25,7 +25,7 @@ body.quiSommesNous {
 }
 
 .quiSommesNous-body {    
-    padding: 20px 25px;
+    padding: 20px 10px;
     max-width: 40em;
     left: 0;
     right: 0;
@@ -36,17 +36,18 @@ body.quiSommesNous {
 	// width: 50%;
 }
 
-.membreAssociation-container {
+.MembreAssociation-container {
 	margin: auto;
 	width: 520px;
 	margin-top: 50px;
 }
 
 .imageAvatar {
-    background: url('avatar-Membre-association-56.png') no-repeat;
+    background: url('../assets/images/avatar-membre-association-56.png') no-repeat;
     width: 56px;
     height: 56px;
     display: inline-block;
+    vertical-align: top;
 }		
 .imageAvatar-association {
     border-radius: 50%;
@@ -78,27 +79,18 @@ body.quiSommesNous {
 }
 
 .MembreAssociation-titre {
+    margin-top: 20px;
+}
+
+.MembreAssociation-contenu {
     display: inline-block;
-    vertical-align: top;
+    width: 78%;
 }
 
 .MembreAssociation-nomComplet {
-    display: inline-block;
-    vertical-align: top;
+    font-size: .9em;
 }
 
-.membreAssociation {
-	
-}
-
-.membreAssociation-titre {
-    display: inline-block;
-	width: 250px;
-}
-
-.membreAssociation-personne {
-	margin-left: 20px;
-}
 // bug on menu if activate
 // .quiSommesNous a {
 //     color: @color-bodyHeader-dark;
