--- a/layouts/partials/article-info.html
+++ b/layouts/partials/article-info.html
@@ -1,4 +1,4 @@
-<a class="article-titre" href="/{{path}}">{{titre}}</a>
+<a class="article-titre" href="/{{path}}"><h1>{{titre}}</h1></a>
 {{#isSousTitre}}
 <a class="article-sousTitre" href="/{{path}}">{{sous-titre}}</a>
 {{/isSousTitre}}
