--- a/css/article-detail.less
+++ b/css/article-detail.less
@@ -1,6 +1,6 @@
 .articleDetail {
     background-color: @color-bg-article;    
-    padding: 20px 25px;
+    padding: 20px 10px;
     max-width: 40em;
     left: 0px;
     right: 0px;
@@ -9,13 +9,13 @@
 
 .articleDetail h2 {
     margin-top: 30px;
-    font-size: 1.3em;
+/*    font-size: 1.3em;*/
 }
 
 .articleDetail h3 {
     margin-top: 15px;
-    font-size: 1.1em;
-    font-variant: all-petite-caps;
+/*    font-size: 1.1em;
+    font-variant: all-petite-caps;*/
 }
 
 .articleDetail p {
