--- a/css/font.less
+++ b/css/font.less
@@ -1,29 +1,15 @@
 @font-face {
-    font-family: 'font-regular';
-    /*src: url('../font/Roboto/Roboto-Regular-webfont.ttf') format('truetype');*/
+    font-family: 'regular';
     src: url('../font/sourcesanspro-regular-webfont.woff2') format('woff2'),
-        url('../font/sourcesanspro-regular-webfont.woff') format('woff'),
-        url('../font/sourcesanspro-regular-webfont.ttf') format('truetype');    
-    font-weight: normal;
-    font-style: normal;
+         url('../font/sourcesanspro-regular-webfont.woff') format('woff'),
+         /*url('../font/sourcesanspro-regular-webfont.ttf') format('truetype'),*/
+         url('../font/sourcesanspro-regular-webfont.svg#source_sans_proregular') format('svg');
 }
 
 @font-face {
-    font-family: 'font-light';
-    /*src: url('../font/Roboto/Roboto-Regular-webfont.ttf') format('truetype');*/
-    src: url('../font/sourcesanspro-light-webfont.woff2') format('woff2'),
-        url('../font/sourcesanspro-light-webfont.woff') format('woff'),
-        url('../font/sourcesanspro-light-webfont.ttf') format('truetype');    
-    font-weight: normal;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: 'font-semibold';
-    /*src: url('../font/Roboto/Roboto-Regular-webfont.ttf') format('truetype');*/
+    font-family: 'semibold';
     src: url('../font/sourcesanspro-semibold-webfont.woff2') format('woff2'),
-        url('../font/sourcesanspro-semibold-webfont.woff') format('woff'),
-        url('../font/sourcesanspro-semibold-webfont.ttf') format('truetype');    
-    font-weight: normal;
-    font-style: normal;
+         url('../font/sourcesanspro-semibold-webfont.woff') format('woff'),
+         /*url('../font/sourcesanspro-semibold-webfont.ttf') format('truetype'),*/
+         url('../font/sourcesanspro-semibold-webfont.svg#source_sans_prosemibold') format('svg');
 }
