--- a/layouts/qui-sommes-nous.html
+++ b/layouts/qui-sommes-nous.html
@@ -26,24 +26,56 @@
     </p>
     <button class="btn-adhesion">Adhérer à l'association</button>
         
-    <div class="membreAssociation-list">
-        <h2 class="membreAssociationList-titre">Les membres de l'association</h2>
-        <div class="membreAssociation">
-            <img src="../" class="membreAssociation-avatar avatar-presidente"></img>
-            <div class="membreAssociation-titre">Présidente</div>
-            <div class="membreAssociation-personne">{{presidente}}</div>
+    <div class="MembreAssociation-list">
+        <h2 class="MembreAssociationList-titre">Les Membres de l'association</h2>
+        <div class="MembreAssociation">
+            <h3 class="MembreAssociation-titre">Présidente</h3>
+            <span class="imageAvatar imageAvatar-01 imageAvatar-association"></span>
+            <div class="MembreAssociation-contenu">
+                <div class="MembreAssociation-nomComplet">{{presidente}}</div>
+                <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi distinctio et unde dolores, quibusdam nihil aliquid natus voluptates earum quos assumenda nobis pariatur placeat tempora. Repellendus, minus aut porro amet.</div>
+            </div>
         </div>
-    </div>
-        <div class="membreAssociation"><span class="membreAssociation-titre">Secrétaire</span><span class="membreAssociation-personne">{{secretaire}}</span></div>
-        <div class="membreAssociation"><span class="membreAssociation-titre">Secrétaire adjointe</span><span class="membreAssociation-personne">{{secretaire-adjointe}}</span></div>
-        <div class="membreAssociation"><span class="membreAssociation-titre">Trésorière</span><span class="membreAssociation-personne">{{tresoriere}}</span></div>
-        <div class="membreAssociation"><span class="membreAssociation-titre">Membres du conseil d'administration</span><span class="membreAssociation-personne">{{membre-conseil-administration}}</span></div>
-    </div>
-    
-	<div class="MembreAssociation">
-		<span class="imageAvatar imageAvatar-01 imageAvatar-association"></span>
-		<span class="MembreAssociation-titre">Secrétaire</span>
-		<span class="MembreAssociation-nomComplet">Hélène Leroux</span>
-	</div>    
+        <div class="MembreAssociation">
+            <h3 class="MembreAssociation-titre">Secrétaire</h3>
+            <span class="imageAvatar imageAvatar-03 imageAvatar-association"></span>
+            <div class="MembreAssociation-contenu">
+                <div class="MembreAssociation-nomComplet">{{secretaire}}</div>
+                <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi distinctio et unde dolores, quibusdam nihil aliquid natus voluptates earum quos assumenda nobis pariatur placeat tempora. Repellendus, minus aut porro amet.</div>
+            </div>
+        </div>
+        <div class="MembreAssociation">
+            <h3 class="MembreAssociation-titre">Secrétaire adjointe</h3>
+            <span class="imageAvatar imageAvatar-05 imageAvatar-association"></span>
+            <div class="MembreAssociation-contenu">
+                <div class="MembreAssociation-nomComplet">{{secretaire-adjointe}}</div>
+                <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi distinctio et unde dolores, quibusdam nihil aliquid natus voluptates earum quos assumenda nobis pariatur placeat tempora. Repellendus, minus aut porro amet.</div>
+            </div>
+        </div>
+        <div class="MembreAssociation">
+            <h3 class="MembreAssociation-titre">Trésorière</h3>
+            <span class="imageAvatar imageAvatar-03 imageAvatar-association"></span>
+            <div class="MembreAssociation-contenu">
+                <div class="MembreAssociation-nomComplet">{{tresoriere}}</div>
+                <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi distinctio et unde dolores, quibusdam nihil aliquid natus voluptates earum quos assumenda nobis pariatur placeat tempora. Repellendus, minus aut porro amet.</div>
+            </div>
+        </div>
+        <div class="MembreAssociation">
+            <h3 class="MembreAssociation-titre">Membres du conseil d'administration</h3>
+            <span class="imageAvatar imageAvatar-06 imageAvatar-association"></span>
+            <div class="MembreAssociation-contenu">
+                <div class="MembreAssociation-nomComplet">{{membre-conseil-administration-01}}</div>
+                <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi distinctio et unde dolores, quibusdam nihil aliquid natus voluptates earum quos assumenda nobis pariatur placeat tempora. Repellendus, minus aut porro amet.</div>
+            </div>
+        </div>
+        <div class="MembreAssociation">
+            <span class="imageAvatar imageAvatar-04 imageAvatar-association"></span>
+            <div class="MembreAssociation-contenu">
+                <div class="MembreAssociation-nomComplet">{{membre-conseil-administration-02}}</div>
+                <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi distinctio et unde dolores, quibusdam nihil aliquid natus voluptates earum quos assumenda nobis pariatur placeat tempora. Repellendus, minus aut porro amet.</div>
+            </div>            
+        </div>
+    </div>    
+       
 </div>
 {{> footer}}
